--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <script src="/app.js"></script>
+<body>Hello
+    <script src="app04.js"></script>
 </body>
 </html>
