--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>Hello
-    <script src="app04.js"></script>
+    <script src="appDeepCopy.js"></script>
 </body>
 </html>
